chores: update api endpoint in swagger document
